--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@types/node": "12.0.8",
     "@types/react": "16.8.20",
     "@types/react-dom": "16.8.4",
+    "prismjs": "^1.16.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "spectacle": "^5.5.0",
     "typescript": "3.5.2"
   },
   "scripts": {
