Tweaked docker-compose file to handle port 80 and the name change

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3"
 services:
-  webapp:
+  gen-cyber-front-end:
     build: .
     expose:
       - "80"
     ports:
-      - "8800:80"
+      - "80:80"
